fix (layout) : card image overlaps border
Image and card widths duplicated. Image just needs width: 100% so it fills the
top the card area without spilling over the border.

--- a/src/components/cards/DashboardCard.scss
+++ b/src/components/cards/DashboardCard.scss
@@ -8,6 +8,6 @@
 
     .card-img-top {
         height: 185px;
-        width: 317px;
+        width: 100%;
     }
 }
